# bhcc

./: .gitignore  CMakeLists.txt  keywords.gperf
bhcc/: ast.h  compiler.h  error.h  fend.c  io.c  io.h  lexer.c  main.c  parser.c  tok_def.h  tokens.h
bhcc/util/: vec.h
test/: test_main.c  test_util.h  test_vec.c  vec_test.c
